--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,9 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p>
+      <<a href="/upload">Upload</a>
+    </p>
+    <p>
       <form action="/logoff" method="POST">
         <input type="submit" value="Logoff" />
       </form>
