--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
       </p>
     <%}%>
     <p>
-      <a href="/users/forgot">Esqueceu sua senha?</a> | <a href="/users/signup">Não possui cadastro?</a>
+      <a href="/account/forgot">Esqueceu sua senha?</a> | <a href="/account/signup">Não possui cadastro?</a>
     </p>
   </body>
 </html>
