raw preview add

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,10 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p>
-      <<a href="/upload">Upload</a>
+      <a href="/photo">Upload</a>
+    </p>
+    <p>
+      <a href="/load">Repository</a>
     </p>
     <p>
       <form action="/logoff" method="POST">
