--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:100,300,500">
     <link rel="stylesheet" href="../stylesheets/upload.css">
     <script src="https://cdn.jsdelivr.net/npm/dcraw"></script>
-    <script src="../javascripts/rawPreview.js" defer></script>
+    <script  type="text/javascript" src="../javascripts/rawPreview.js" defer></script>
     <title>Upload</title>
   </head>
 
