--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en" dir="ltr">
-
+  
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../stylesheets/login.css">
-    <title>Log In</title>
+    <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
@@ -19,8 +19,8 @@
           <li><a href="/login">Log In</a></li>
           <li><a href="/users">Sign Up</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Feedback</a></li>
+          <li><a href="/faq">FAQ</a></li>
+          <li><a href="/feedback">Feedback</a></li>
         </ul>
       </div>
     </nav>
