--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../stylesheets/index.css">
-    <title>Home</title>
+    <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -18,8 +18,8 @@
                 <li><a href="/login">Log In</a></li>
                 <li><a href="/users">Sign Up</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Feedback</a></li>
+                <li><a href="/faq">FAQ</a></li>
+                <li><a href="/feedback">Feedback</a></li>
             </ul>
         </div>
     </nav>
