--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,8 +19,8 @@
           <li><a href="/login">Log In</a></li>
           <li><a href="/users">Sign Up</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Feedback</a></li>
+          <li><a href="/faq">FAQ</a></li>
+          <li><a href="/feedback">Feedback</a></li>
         </ul>
       </div>
     </nav>
