--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -23,60 +23,61 @@
             <li><a href="/feedback">Feedback</a></li>
         </ul>
     </div>
-</nav>
+  </nav>
 
-  <div class="accordion">
-    <div class="image-box">
-      <!--<img src="images/mainImg.png" alt="Accordion Image">-->
-    </div>
-    <div class="accordion-text">
-      <div class="title">FAQ</div>
-    <ul class="faq-text">
-      <li>
-        <div class="question-arrow">
-          <span class="question">What do you mean by HTML & CSS?</span>
-          <i class="bx bxs-chevron-down arrow"></i>
-        </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, doloribus.</p>
-        <span class="line"></span>
-      </li>
-      <li>
-        <div class="question-arrow">
-          <span class="question">What do you mean by JavaScript?</span>
-          <i class="bx bxs-chevron-down arrow"></i>
-        </div>
-        <p>JavaScript is a text-based programming language used both on the client-side and server-side that allows you to make web pages interactive</p>
-        <span class="line"></span>
-      </li>
-      <li>
-        <div class="question-arrow">
-          <span class="question">From where you learned HTML & CSS?</span>
-          <i class="bx bxs-chevron-down arrow"></i>
-        </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, necessitatibus.</p>
-        <span class="line"></span>
-      </li>
-      <li>
-        <div class="question-arrow">
-          <span class="question">Which code editor do you use?</span>
-          <i class="bx bxs-chevron-down arrow"></i>
-        </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, labore.</p>
-        <span class="line"></span>
-      </li>
-      <li>
-        <div class="question-arrow">
-          <span class="question">Software you use for video editing?</span>
-          <i class="bx bxs-chevron-down arrow"></i>
-        </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, repudiandae!</p>
-        <span class="line"></span>
-      </li>
-    </ul>
+  <div class="set">
+    <div class="accordion">
+      <div class="image-box">
+        <!--<img src="images/mainImg.png" alt="Accordion Image">-->
+      </div>
+      <div class="accordion-text">
+        <div class="title">FAQ</div>
+      <ul class="faq-text">
+        <li>
+          <div class="question-arrow">
+            <span class="question">What do you mean by HTML & CSS?</span>
+            <i class="bx bxs-chevron-down arrow"></i>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, doloribus.</p>
+          <span class="line"></span>
+        </li>
+        <li>
+          <div class="question-arrow">
+            <span class="question">What do you mean by JavaScript?</span>
+            <i class="bx bxs-chevron-down arrow"></i>
+          </div>
+          <p>JavaScript is a text-based programming language used both on the client-side and server-side that allows you to make web pages interactive</p>
+          <span class="line"></span>
+        </li>
+        <li>
+          <div class="question-arrow">
+            <span class="question">From where you learned HTML & CSS?</span>
+            <i class="bx bxs-chevron-down arrow"></i>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, necessitatibus.</p>
+          <span class="line"></span>
+        </li>
+        <li>
+          <div class="question-arrow">
+            <span class="question">Which code editor do you use?</span>
+            <i class="bx bxs-chevron-down arrow"></i>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, labore.</p>
+          <span class="line"></span>
+        </li>
+        <li>
+          <div class="question-arrow">
+            <span class="question">Software you use for video editing?</span>
+            <i class="bx bxs-chevron-down arrow"></i>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, repudiandae!</p>
+          <span class="line"></span>
+        </li>
+      </ul>
+      </div>
     </div>
   </div>
-
-
+  
   <script>
     let li = document.querySelectorAll(".faq-text li");
     for (var i = 0; i < li.length; i++) {
@@ -87,7 +88,7 @@
         }else{
           clickedLi = e.target.parentElement.parentElement;
         }
-       clickedLi.classList.toggle("showAnswer");
+      clickedLi.classList.toggle("showAnswer");
       });
     }
   </script>
