--- a/views/process.ejs
+++ b/views/process.ejs
@@ -105,7 +105,7 @@
       <span class="text">Automatic Process</span>
     </div>
     <p>
-        <form action="/exec" method="POST">
+        <form action="/process/exec" method="POST">
             <button type="submit" class="btn btn-default">Process</button>
         </form>
     </p>
