Add manual process. Modified python code

--- a/views/a-process.ejs
+++ b/views/a-process.ejs
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title> Drop Down Sidebar Menu | CodingLab </title>
-    <link rel="stylesheet" href="../stylesheets/repository.css">
+    <link rel="stylesheet" href="../stylesheets/a-process.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
@@ -48,8 +48,8 @@
         </div>
         <ul class="sub-menu">
           <li><a class="link_name" href="#">Process</a></li>
-          <li><a href="/process">Automatic</a></li>
-          <li><a href="#">Step by Step</a></li>
+          <li><a href="/a-process">Automatic</a></li>
+          <li><a href="/m-process">Manual</a></li>
         </ul>
       </li>
       <li>
@@ -105,7 +105,7 @@
       <span class="text">Automatic Process</span>
     </div>
     <p>
-        <form action="/process/exec" method="POST">
+        <form action="/a-process/exec" method="POST">
             <button type="submit" class="btn btn-default">Process</button>
         </form>
     </p>
