--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -48,8 +48,8 @@
         </div>
         <ul class="sub-menu">
           <li><a class="link_name" href="#">Process</a></li>
-          <li><a href="/process">Automatic</a></li>
-          <li><a href="#">Step by Step</a></li>
+          <li><a href="/a-process">Automatic</a></li>
+          <li><a href="/m-process">Manual</a></li>
         </ul>
       </li>
       <li>
